cmake_minimum_required(VERSION 3.28)
get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "." ProjectId ${ProjectId})
project(${ProjectId} C)
set(CMAKE_C_STANDARD 99)
file(GLOB_RECURSE c_files "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
file(GLOB_RECURSE h_files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
set(HEADER_DIRS "")
foreach (header ${h_files})
    get_filename_component(dir ${header} DIRECTORY)
    list(APPEND HEADER_DIRS ${dir})
endforeach ()
list(REMOVE_DUPLICATES HEADER_DIRS)
include_directories(${HEADER_DIRS})
foreach (file ${c_files})
    file(RELATIVE_PATH relPath ${CMAKE_CURRENT_SOURCE_DIR} ${file})
    string(REPLACE "/" "." execName ${relPath})
    string(REPLACE "\\" "." execName ${execName})
    string(REPLACE ".c" "" execName ${execName})
    add_executable(${execName} ${file})
    set_target_properties(${execName} PROPERTIES LINK_FLAGS "-mconsole")
    foreach (header ${h_files})
        get_filename_component(header_name ${header} NAME_WE)
        file(READ ${file} file_content)
        if (file_content MATCHES "#include[ ]*\"${header_name}\\.h\"")
            include_directories(${HEADER_DIRS})
        endif ()
    endforeach ()
endforeach ()